--- a/login/login.phtml
+++ b/login/login.phtml
@@ -43,9 +43,7 @@
 
 			</div>
 
-			<footer class="box footer">
-				<p>Copyright © 2010-<?=date("Y")?> FusionOne Co.,Ltd. All Rights Reserved.</p>
-			</footer>
+			<?php require_once '../html/footer.phtml';?>
 		</div>
 	</body>
 </html>
