--- a/managementElements/managementElements.phtml
+++ b/managementElements/managementElements.phtml
@@ -196,9 +196,8 @@
 					-->
 
 				</div>
-			<footer class="box footer">
-				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
-			</footer>
+
+			<?php require_once '../html/footer.phtml';?>
 
 		</div>
 	</body>
