--- a/personalWorkTime/personalWorkTime.phtml
+++ b/personalWorkTime/personalWorkTime.phtml
@@ -37,16 +37,16 @@ $sum = $model->getSum();
 
 									<!--検索フォームの切り替え　月次-->
 							       	<td id="formMonth">
-										<input type="month" name="month" placeholder="例)2014-01" value="<?=$model->getMonth();?>">
+										<input type="text" name="month" size="10" class="ympicker" value="<?=$model->getMonth();?>">
 									</td>
 
 									<!--検索フォームの切り替え　期間-->
 									<td id="formPeriod">
 										 開始期間
-										<input type="month" name="startDay" placeholder="例)2014-06"
+										<input type="text" name="startDay" class="ympicker""
 												size="15" value="<?=$model->getStartDay();?>">
 										 ～ 終了期間
-										<input type="month" name="endDay" placeholder="例)2014-09"
+										<input type="text" name="endDay" class="ympicker""
 												size="15" value="<?=$model->getEndDay();?>">
 									</td>
 								</tr>
@@ -68,65 +68,61 @@ $sum = $model->getSum();
 						<br>
 						表示期間 : <?=$model->getInfomation();?>
 
-						<?php
-						for($v=0; $v<count($workdata); $v++){?>
-							<table class="worksheet">
-								<caption><?=$model->getName();?>出勤表</caption>
-								<tr class="record">
-									<td>日付</td>
-									<td>曜日</td>
-									<td>出勤</td>
-									<td>退勤</td>
-									<td>休憩時間</td>
-									<td>実働時間</td>
-									<td>ステータス</td>
-									<td>備考欄</td>
-								</tr>
+						<?php for($v=0; $v<count($workdata); $v++){?>
+						<table class="worksheet">
+							<caption><?=$model->getName();?>出勤表</caption>
+							<tr class="record">
+								<td>日付</td>
+								<td>曜日</td>
+								<td>出勤</td>
+								<td>退勤</td>
+								<td>休憩時間</td>
+								<td>実働時間</td>
+								<td>ステータス</td>
+								<td>備考欄</td>
+							</tr>
 
-								<?php
-									for($i=0;$i<count($workdata[$v]); $i++){
-								?>
+							<?php for($i=0;$i<count($workdata[$v]); $i++){?>
 
-								<tr <?php if($workdata[$v][$i]['day'] == date('Y-m-d')){echo 'id="today"';}?>>
+							<tr <?php if($workdata[$v][$i]['day'] == date('Y-m-d')){echo 'id="today"';}?>>
+								<td class="<?=$workdata[$v][$i]['class'];?>"><?=$workdata[$v][$i]['day']?></td>
+								<td class="<?=$workdata[$v][$i]['class'];?>"><?=$workdata[$v][$i]['week']?></td>
+								<td><?=$workdata[$v][$i]['starttime']?></td>
+								<td><?=$workdata[$v][$i]['endtime']?></td>
+								<td><?=$workdata[$v][$i]['resttime']?></td>
+								<td><?=$workdata[$v][$i]['worktime']?></td>
 
-									<td class="<?=$workdata[$v][$i]['class'];?>"><?=$workdata[$v][$i]['day']?></td>
-									<td class="<?=$workdata[$v][$i]['class'];?>"><?=$workdata[$v][$i]['week']?></td>
-									<td><?=$workdata[$v][$i]['starttime']?></td>
-									<td><?=$workdata[$v][$i]['endtime']?></td>
-									<td><?=$workdata[$v][$i]['resttime']?></td>
-									<td><?=$workdata[$v][$i]['worktime']?></td>
+								<td>
+									<select name="status[]">
+									<?php for($y=0; $y<count($statusinfo); $y++){?>
+										<option value="<?=$statusinfo[$y][0]?>"
+											<?php
+												if($workdata[$v][$i]['statusid'] == $statusinfo[$y][0]){echo ' selected';}?>>
+												<?=$statusinfo[$y][1]?>
+										</option>
+									<?php }?>
+									</select>
+								</td>
 
-									<td>
-										<select name="status[]">
-										<?php for($y=0; $y<count($statusinfo); $y++){?>
-											<option value="<?=$statusinfo[$y][0]?>"
-												<?php
-													if($workdata[$v][$i]['statusid'] == $statusinfo[$y][0]){echo ' selected';}?>>
-													<?=$statusinfo[$y][1]?>
-											</option>
-											<?php }?>
-										</select>
-									</td>
+								<td>
+									<textarea name="memo[]" rows="1" cols="15" id="memo">
+									<?=$workdata[$v][$i]['memo']?></textarea>
+								</td>
+								<input type="hidden" name="day[]" value="<?=$workdata[$v][$i]['day']?>">
+							<?php }?>
+							</tr>
+						</table>
 
-									<td>
-										<textarea name="memo[]" rows="1" cols="15" id="memo">
-										<?=$workdata[$v][$i]['memo']?></textarea>
-									</td>
-									<input type="hidden" name="day[]" value="<?=$workdata[$v][$i]['day']?>">
-								<?php }?>
-								</tr>
-							</table>
-
-							<table class="sum">
-								<tr class="record">
-									<th>勤務日数</th>
-									<th><?=$sum[$v]['sumDay']?>
-								</tr>
-								<tr class="record">
-									<th>合計勤務時間</th>
-									<th><?=$sum[$v]['sumWorkTime']?></th>
-								</tr>
-							</table>
+						<table class="sum">
+							<tr class="record">
+								<th>勤務日数</th>
+								<th><?=$sum[$v]['sumDay']?></th>
+							</tr>
+							<tr class="record">
+								<th>合計勤務時間</th>
+								<th><?=$sum[$v]['sumWorkTime']?></th>
+							</tr>
+						</table>
 
 						<?php }?>
 
