--- a/html/menuArea.phtml
+++ b/html/menuArea.phtml
@@ -81,6 +81,12 @@
 		   							各種設定一覧
 		   						</a>
 		   					</li>
+
+		   					<li>
+		   						<a href="/attendanceSystem_html/loginHistory/loginHistory.php">
+		   							ログイン履歴
+		   						</a>
+		   					</li>
 		   				</ul>
 		  			</li>
 
